--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -16,6 +16,8 @@
 
     height: 100vh;
 
+    overflow-y: hidden;
+
     @include breakpoint(mobile){height: 200vw};
 }
 
